# ms_fabric_cicd_cli

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BUSINESS_ADOPTION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLIENT_TUTORIAL.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  GAP_ANALYSIS.md  HANDOFF.md  LICENSE  Makefile  PROJECT_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  USAGE_GUIDE.md  azure-pipelines.yml  environment.yml  fix_cli_docs.py  fix_edp_docs.py  fix_sig.py  list_workspace_items.py  list_workspaces.py  patch3.py  patch_git.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_deployment.sh  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.planning/: PROJECT.md
audit_logs/: .gitkeep  fabric_cli_telemetry.jsonl  fabric_operations_2025-11-27.jsonl  fabric_operations_2025-11-28.jsonl  fabric_operations_2025-12-09.jsonl
docs/: AI_AGENT_CONTEXT.md  BLUEPRINT_CATALOG.md  BUSINESS_ADOPTION_GUIDE.md  CICD_ARCHITECTURE_REPORT.md  CLIENT_TUTORIAL.md  CLI_SCENARIO_WALKTHROUGH.md  DATA_PRODUCT_FACTORY_GUIDE.md  DOCKER_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
scripts/: analyze_migration.py  bulk_destroy.py  generate_project.py  list_workspaces.py  preflight_check.py
src/: __init__.py  fabric_deploy.py
tests/: conftest.py  test_admin_scripts.py  test_audit.py  test_cli.py  test_cli_promote.py  test_config.py  test_datasource_repoint.py  test_deployer.py  test_deployment_pipeline.py  test_deployment_state.py  test_fabric_api_base.py  test_fabric_git_api.py  test_fabric_wrapper.py  test_generate_project.py  test_git_integration.py  test_onboard.py  test_retry.py  test_scaffold_workspace.py  test_secrets.py  test_telemetry.py  (+2 more)
(+248 files in other folders)
