[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usf-fabric-cli"
version = "1.5.0"
description = "CLI tool for Microsoft Fabric CI/CD automation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sanmi Ibitoye", email = "sanmi.ibitoye@leit.ltd"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.19.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "requests>=2.31.0",
    "gitpython>=3.1.0",
    "azure-storage-blob>=12.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.2",
    "packaging>=23.0"
]

[project.scripts]
# New entry point using restructured package
fabric-cicd = "usf_fabric_cli.cli:app"
# Backward compatibility - keep old entry point working
usf-fabric = "usf_fabric_cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["usf_fabric_cli*"]

[tool.setuptools.package-data]
usf_fabric_cli = ["schemas/*.json"]
